# accel

./: .gitignore  .gitlab-ci.yml  .nvidia-docker.env  .rustfmt.toml  .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  LICENSE.md  Makefile  README  README.md  RELEASES.md  a.cu  rustfmt.toml  setup_nvptx_toolchain.sh
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: check.yml  cuda.yml
acc-derive/: Cargo.toml
acc-derive/src/: lib.rs
accel/: Cargo.toml
accel-core/: Cargo.toml  README.md  nvptx64-nvidia-cuda.json  rust-toolchain
accel-core/.cargo/: config
accel-core/src/: cuda.rs  indexing.rs  intrinsics.rs  lib.rs  stream.rs
accel-derive/: Cargo.toml  README.md
accel-derive/examples/: dependencies.rs
accel-derive/src/: argref.rs  build.rs  builder.rs  config.rs  contexted.rs  device.rs  driver.rs  generate.rs  host.rs  launchable.rs  lib.rs  panic.ll  parse.rs  parser.rs
accel-derive/test_kernels/: dependencies.rs
accel-derive/tests/: dependencies.rs  do_nothing.rs  try_build.rs
accel-derive/tests/kernels/: arguments.rs  dependencies.rs  dependencies_default.rs  dependencies_git.rs  do_nothing.rs
accel-example/: Cargo.toml
accel-example/src/: main.rs
accel/benches/: memcpy.rs
accel/examples/: add.rs  add_managed.rs  assert.rs  assert_stream.rs  printf.rs  ptx_str.rs  read_host_memory.rs  slice.rs
accel/src/: array.rs  block.rs  device.rs  error.rs  execution.rs  grid.rs  instruction.rs  kernel.rs  lib.rs  linker.rs  memory.rs  module.rs  mvec.rs  profiler.rs  stream.rs  texture.rs  uvec.rs
accel/src/driver/: array.rs  context.rs  device.rs  instruction.rs  kernel.rs  linker.rs  memory.rs  mod.rs  module.rs
accel/src/memory/: array.rs  device.rs  dimension.rs  host.rs  info.rs  mod.rs  page_locked.rs  registered.rs  scalar.rs  slice.rs
accel/tests/: add.rs  argref.rs  assert.rs  assert_stream.rs  launch_async.rs  printf.rs  ptx_str.rs  read_host_memory.rs  slice.rs
accel/tests/data/: Makefile  add.cu  add.cubin  add.ptx  dest.cubin  link_error.cu  link_error.ptx  sub.cu  sub.ptx
accel/tests/launch_async/: mut_ref.rs  mut_ref.stderr  mut_ref_fail.rs  mut_ref_fail.stderr  mut_ref_success.rs  temporal_value.rs
accel/tests/ptx/: Makefile  add.cu  add.ptx  sub.cu  sub.cubin  texture.cu  texture.cubin  texture.ptx
cuda-sys/: Cargo.toml  README.md  build.rs
cuda-sys/src/: cublas.rs  cucomplex.rs  cuda.rs  cuda_runtime.rs  cuda_tests.rs  cudart.rs  cudart_tests.rs  driver_types.rs  lib.rs  library_types.rs  vector_types.rs
cuda-sys/wrapper/: cucomplex.h  cudart.h  driver_types.h  library_types.h  vector_types.h
derive_kernel/: Cargo.toml
derive_kernel/src/: lib.rs
diagrams/: .gitignore  compile_flow.tex
docker/: .gitignore  Makefile  README.md  centos.Dockerfile  ci.py  ci.yml  cuda.conf  ubuntu.Dockerfile
examples/: add.rs  add_managed.rs
examples/vector_add/: Cargo.toml
examples/vector_add/src/: main.rs
nvptx/: Cargo.toml
nvptx/src/: compile.rs  config.rs  generate.rs  lib.rs  parse.rs
nvptx/tests/: compile.rs
public/: index.html
rust2ptx/: Cargo.toml
rust2ptx/src/: main.rs
src/: device.rs  error.rs  kernel.rs  lib.rs  main.rs  module.rs  mvec.rs  ptx_builder.rs  uvec.rs
src/ptx_builder/: Cargo.toml  Xargo.toml  builder.rs  bytecode.rs  config.rs  install.rs  lib.rs.j2  mod.rs  nvptx64-nvidia-cuda.json
test/: Makefile  a.cpp  acc_cublas.cpp  acc_fortran.f90  acc_naked.cpp  report1.qdrep  report2.qdrep  report2.sqlite  report3.qdrep  report3.sqlite
