[package]
name = "accel"
version = "0.1.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]

description   = "GPGPU Framework for Rust"
documentation = "https://docs.rs/accel"
repository    = "https://github.com/termoshtt/accel"
keywords      = ["GPGPU", "CUDA"]
license       = "MIT"
readme        = "README.md"
categories    = []

[dependencies]
procedurals = "0.2.3"

[dependencies.cuda-sys]
version = "0.2.0-alpha"
path = "cuda-sys"

[dev-dependencies.accel-derive]
version = "0.1.0"
path = "accel-derive"
