[package]
name = "accel-core"
version = "0.3.0-alpha.3"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

description   = "Support crate for writing GPGPU kernels using accel"
documentation = "https://docs.rs/accel-core/"
repository    = "https://github.com/termoshtt/accel"
keywords      = ["GPGPU", "CUDA", "platform-intrinsic"]
license       = "MIT/Apache-2.0"
readme        = "README.md"
categories    = []
