[package]
name = "accel-derive"
version = "0.3.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

description   = "Procedual macro for writing GPGPU kernel"
documentation = "https://docs.rs/accel-derive/"
repository    = "https://github.com/termoshtt/accel"
keywords      = ["GPGPU", "CUDA", "proc-macro"]
license       = "MIT/Apache-2.0"
readme        = "README.md"
categories    = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.7"
quote = "1.0.2"
syn = { version = "1.0", features =  ["full", "extra-traits"] }

dirs = "2.0.2"
maplit = "1.0.2"
serde = { version = "1.0.104", features = ["derive"] }
toml = "0.5.5"

failure = "0.1.6"
anyhow = "1.0"

[dev-dependencies]
trybuild = "1.0.19"
accel = { version = "0.3.0-alpha.2", path = "../accel" }
