[package]
name = "accel-derive"
version = "0.3.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

description   = "Procedual macro for writing GPGPU kernel"
documentation = "https://docs.rs/accel-derive/"
repository    = "https://github.com/termoshtt/accel"
keywords      = ["GPGPU", "CUDA", "proc-macro"]
license       = "MIT/Apache-2.0"
readme        = "README.md"
categories    = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.18"
quote = "1.0.6"
syn = { version = "1.0.30", features = ["full", "extra-traits"] }

dirs = "2.0.2"
maplit = "1.0.2"
serde = { version = "1.0.111", features = ["derive"] }
toml = "0.5.6"

failure = "0.1.8"
anyhow = "1.0.31"

[dev-dependencies]
trybuild = "1.0.27"
accel = { version = "0.3.0", path = "../accel" }
