[package]
name = "accel"
version = "0.3.0-alpha.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

description   = "GPGPU Framework for Rust"
documentation = "https://docs.rs/accel"
repository    = "https://gitlab.com/termoshtt/accel"
keywords      = ["GPGPU", "CUDA"]
license       = "MIT"
readme        = "../README.md"
categories    = []

[dependencies]
cuda-runtime-sys = "=0.3.0-alpha.1"
cuda-driver-sys = "=0.3.0-alpha.1"

[dev-dependencies.accel-derive]
path = "../accel-derive"
