[package]
name = "accel"
version = "0.3.0-alpha.2"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

description   = "GPGPU Framework for Rust"
documentation = "https://docs.rs/accel"
repository    = "https://gitlab.com/termoshtt/accel"
keywords      = ["GPGPU", "CUDA"]
license       = "MIT/Apache-2.0"
readme        = "../README.md"
categories    = []

[dependencies]
log = "0.4"
num-traits = "0.2"
num-derive = "0.2"
thiserror = "1.0"
cuda-driver-sys = "=0.3.0-alpha.1"
bitflags = "1.2"
derive-new = "0.5"
paste = "*"
accel-derive = { version = "=0.3.0-alpha.2", path = "../accel-derive" }