[package]
name = "accel"
version = "0.3.1"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

description   = "GPGPU Framework for Rust"
documentation = "https://docs.rs/accel"
repository    = "https://gitlab.com/termoshtt/accel"
keywords      = ["GPGPU", "CUDA"]
license       = "MIT/Apache-2.0"
readme        = "../README.md"
categories    = []

[dependencies]
accel-derive = { version = "0.3.0", path = "../accel-derive" }
bitflags = "1.2.1"
cuda-driver-sys = "0.3.0"
derive-new = "0.5.8"
log = "0.4.8"
num-derive = "0.2"
num-traits = "0.2.11"
paste = "0.1.13"
thiserror = "1.0.19"

[dev-dependencies]
criterion = "0.3.2"

[[bench]]
name = "memcpy"
harness = false
