[package]
name = "cuda-sys"
version = "0.2.1-alpha.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]

build = "build.rs"
links = "cuda"

description   = "Rust binding to CUDA Driver/Runtime APIs"
documentation = "https://docs.rs/cuda-sys/"
repository    = "https://github.com/termoshtt/accel"
keywords      = ["GPGPU", "CUDA", "ffi"]
license       = "MIT"
readme        = "README.md"
categories    = []

[build-dependencies]
bindgen = "~0.43"
